# MAPD-TD

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Manager.cpp  Manager.h  Map.cpp  Map.h  README.md  Scenario.h  Solver.cpp  Solver.h  main.cpp  result-new.txt  test.py
demo/: main.tex
experiment/: analysis.py  copy_file.py  generate.py  presentation_plot.py  rename.py  result-baseline-L.csv  result-baseline-S.csv  result-big-new.csv  result-big.csv  result-exp-L.csv  result-exp-S.csv  result-new-big.csv  result-new-small.csv  result-small-new.csv  result-small.csv  result.csv  result.py  test.py  to_precision.py
experiment/big/: result.csv
experiment/plots/: result.txt
experiment/small/: result.csv
generate/: distance.cpp  main.cpp  task.cpp  well-formed-new.cpp  well-formed.cpp
solver/: Constraints.cpp  Constraints.h  Manager.cpp  Manager.h  Map.cpp  Map.h  Scenario.cpp  Scenario.h  Solver.cpp  Solver.h  main.cpp
test-benchmark/constraints/: test-7-7.map  test-7-7.map.old
test-benchmark/map/: test-5-5.map  test-7-7.map  well-formed-21-35.map  well-formed-33-46.map
test-benchmark/task/: room-32-32-4-10-2.task  well-formed-21-35-10-10-release.task  well-formed-21-35-10-10.task  well-formed-21-35-10-2-release.task  well-formed-21-35-10-2.task  well-formed-21-35-10-5-release.task  well-formed-21-35-10-5.task  well-formed-21-35-20-10-release.task  well-formed-21-35-20-10.task  well-formed-21-35-20-2.task  well-formed-21-35-20-5-release.task  (+57 more)
ui/: Edge.cpp  Edge.h  GraphWidget.cpp  GraphWidget.h  Node.cpp  Node.h  main.cpp
(+1 files in other folders)
